delete broken stuff; add some fixes